src/objects/Royalty_Check__c.object
<CustomObject>
    <description>Check received from an  operator</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Total Check Amount</description>
        <inlineHelpText>Total Check Amount</inlineHelpText>
        <label>Check Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Amount_Calc__c</fullName>
        <label>Check Amount (Calc)</label>
        <summarizedField>Royalty_Line_Item__c.ownerNetValueActual__c</summarizedField>
        <summaryForeignKey>Royalty_Line_Item__c.royalty_Check__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Check_Issue_Date__c</fullName>
        <description>Date Check was Issued</description>
        <inlineHelpText>Date Check was Issued</inlineHelpText>
        <label>Check Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <externalId>true</externalId>
        <label>Check Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Unique Check Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnergyLink_URL__c</fullName>
        <label>EnergyLink URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Variance__c</fullName>
        <formula>Amount__c -   Check_Amount_Calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operator_Name__c</fullName>
        <description>Name of Operator related to check</description>
        <inlineHelpText>Name of Operator related to check</inlineHelpText>
        <label>Operator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Number__c</fullName>
        <label>Owner Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Royalty Checks</relationshipLabel>
        <relationshipName>Royalty_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_from_Source_File__c</fullName>
        <description>Payee from imported source file</description>
        <inlineHelpText>Payee from imported source file</inlineHelpText>
        <label>Payee from Source File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payor_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Royalty Checks (Payor)</relationshipLabel>
        <relationshipName>Royalty_Checks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payor_from_Source_File__c</fullName>
        <description>Payor from source import file.</description>
        <inlineHelpText>Payor from source import file.</inlineHelpText>
        <label>Payor from Source File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSV</fullName>
                </value>
                <value>
                    <fullName>CDEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>flatFileId__c</fullName>
        <label>Flat File Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>flatFileName__c</fullName>
        <label>Flat File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Allocated_Line_Items__c</fullName>
        <label># of Allocated Line Items</label>
        <summaryFilterItems>
            <field>Royalty_Line_Item__c.revenueAllocated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Royalty_Line_Item__c.royalty_Check__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Unallocated_Line_Items__c</fullName>
        <label># of Unallocated Line Items</label>
        <summaryFilterItems>
            <field>Royalty_Line_Item__c.revenueAllocated__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Royalty_Line_Item__c.royalty_Check__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>operatorCheckNumberKey__c</fullName>
        <description>This field stores a unique value of Operator name and Check Number combination</description>
        <label>Operator Check Number Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rawFileId__c</fullName>
        <label>Raw File Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rawFileName__c</fullName>
        <label>Raw File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalrevenueallocated__c</fullName>
        <label>Total Revenue Allocated</label>
        <summarizedField>Royalty_Line_Item__c.totalAllocatedAmount__c</summarizedField>
        <summaryForeignKey>Royalty_Line_Item__c.royalty_Check__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Royalty Check</label>
    <listViews>
        <fullName>All_Created_Last_2_weeks</fullName>
        <columns>Payor_Lookup__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Amount__c</columns>
        <columns>of_Allocated_Line_Items__c</columns>
        <columns>of_Unallocated_Line_Items__c</columns>
        <columns>Notes__c</columns>
        <columns>Source__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Check_Number__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Operator_Name__c</columns>
        <columns>Payee_from_Source_File__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>All Created Last 2 weeks</label>
    </listViews>
    <listViews>
        <fullName>All_DSD</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Check_Number__c</columns>
        <columns>Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>of_Allocated_Line_Items__c</columns>
        <columns>of_Unallocated_Line_Items__c</columns>
        <columns>Operator_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payee_Lookup__c</field>
            <operation>contains</operation>
            <value>dsd</value>
        </filters>
        <label>All - DSD</label>
    </listViews>
    <listViews>
        <fullName>All_HEPII</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Check_Number__c</columns>
        <columns>Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>of_Allocated_Line_Items__c</columns>
        <columns>of_Unallocated_Line_Items__c</columns>
        <columns>Operator_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payee_Lookup__c</field>
            <operation>contains</operation>
            <value>Hawk</value>
        </filters>
        <label>All - HEPII</label>
    </listViews>
    <listViews>
        <fullName>All_Pontiac</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Check_Number__c</columns>
        <columns>Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>of_Allocated_Line_Items__c</columns>
        <columns>of_Unallocated_Line_Items__c</columns>
        <columns>Operator_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payee_Lookup__c</field>
            <operation>contains</operation>
            <value>Pontiac</value>
        </filters>
        <label>All - Pontiac</label>
    </listViews>
    <listViews>
        <fullName>All_RRIG</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Check_Number__c</columns>
        <columns>Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>of_Allocated_Line_Items__c</columns>
        <columns>of_Unallocated_Line_Items__c</columns>
        <columns>Operator_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payee_Lookup__c</field>
            <operation>contains</operation>
            <value>RRIG EP</value>
        </filters>
        <label>All - RRIG</label>
    </listViews>
    <listViews>
        <fullName>All_TCE</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Check_Number__c</columns>
        <columns>Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>of_Allocated_Line_Items__c</columns>
        <columns>of_Unallocated_Line_Items__c</columns>
        <columns>Operator_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payee_Lookup__c</field>
            <operation>contains</operation>
            <value>Turtle Creek</value>
        </filters>
        <label>All - TCE</label>
    </listViews>
    <listViews>
        <fullName>All_TCEI</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Check_Number__c</columns>
        <columns>Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>of_Allocated_Line_Items__c</columns>
        <columns>of_Unallocated_Line_Items__c</columns>
        <columns>Operator_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payee_Lookup__c</field>
            <operation>contains</operation>
            <value>TCE</value>
        </filters>
        <label>All - TCEI</label>
    </listViews>
    <listViews>
        <fullName>All_Tumbler</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Check_Number__c</columns>
        <columns>Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>of_Allocated_Line_Items__c</columns>
        <columns>of_Unallocated_Line_Items__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payee_Lookup__c</field>
            <operation>contains</operation>
            <value>tumbler operating</value>
        </filters>
        <filters>
            <field>Payor_Lookup__c</field>
            <operation>contains</operation>
            <value>chesapeake</value>
        </filters>
        <label>All - Tumbler</label>
    </listViews>
    <listViews>
        <fullName>Cdex_Checks</fullName>
        <columns>NAME</columns>
        <columns>Check_Number__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Line_Item_Variance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>CDEX</value>
        </filters>
        <filters>
            <field>Payee_Lookup__c</field>
            <operation>contains</operation>
            <value>covey</value>
        </filters>
        <label>Cdex Checks</label>
    </listViews>
    <listViews>
        <fullName>Cdex_Checks_without_Payor_or_Payee</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Check_Number__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>CDEX</value>
        </filters>
        <filters>
            <field>Payee_Lookup__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Payor_Lookup__c</field>
            <operation>equals</operation>
        </filters>
        <label>Cdex Checks without Payor or Payee</label>
    </listViews>
    <listViews>
        <fullName>Checks_with_no_Payee</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Check_Number__c</columns>
        <columns>Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>of_Allocated_Line_Items__c</columns>
        <columns>of_Unallocated_Line_Items__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payee_Lookup__c</field>
            <operation>equals</operation>
            <value>&quot; &quot;</value>
        </filters>
        <label>Checks with no Payee</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All5</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Description__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Payor_from_Source_File__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Check_Number__c</columns>
        <columns>Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>of_Allocated_Line_Items__c</columns>
        <columns>of_Unallocated_Line_Items__c</columns>
        <columns>Operator_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payee_Lookup__c</field>
            <operation>contains</operation>
            <value>montego</value>
        </filters>
        <label>All - for payor cleanup</label>
    </listViews>
    <listViews>
        <fullName>Created_Last_2_weeks_with_Unallocated</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Check_Number__c</columns>
        <columns>NAME</columns>
        <columns>of_Allocated_Line_Items__c</columns>
        <columns>of_Unallocated_Line_Items__c</columns>
        <columns>Notes__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Source__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Operator_Name__c</columns>
        <columns>Payee_from_Source_File__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <filters>
            <field>of_Unallocated_Line_Items__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Created Last 2 weeks with Unallocated</label>
    </listViews>
    <listViews>
        <fullName>Expedition_All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Check_Number__c</columns>
        <columns>Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>of_Allocated_Line_Items__c</columns>
        <columns>of_Unallocated_Line_Items__c</columns>
        <columns>Operator_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payee_Lookup__c</field>
            <operation>contains</operation>
            <value>Expedition</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Expedition - All</label>
    </listViews>
    <listViews>
        <fullName>Expedition_SM</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Payor_Lookup__c</columns>
        <columns>Payee_Lookup__c</columns>
        <columns>Check_Issue_Date__c</columns>
        <columns>Check_Number__c</columns>
        <columns>Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>of_Allocated_Line_Items__c</columns>
        <columns>of_Unallocated_Line_Items__c</columns>
        <columns>Operator_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payee_Lookup__c</field>
            <operation>contains</operation>
            <value>Expedition</value>
        </filters>
        <filters>
            <field>Payor_Lookup__c</field>
            <operation>contains</operation>
            <value>SM Energy</value>
        </filters>
        <label>Expedition - SM</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{0000000000}</displayFormat>
        <label>Royalty Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Royalty Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Dont_allow_leading_zeros_CheckNumber</fullName>
        <active>true</active>
        <errorConditionFormula>BEGINS(Check_Number__c  , &apos;0&apos;)</errorConditionFormula>
        <errorDisplayField>Check_Number__c</errorDisplayField>
        <errorMessage>Check Number cannot have leading zeros</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dont_allow_leading_zeros_OwnerNumber</fullName>
        <active>true</active>
        <errorConditionFormula>BEGINS(Owner_Number__c  , &apos;0&apos;)</errorConditionFormula>
        <errorDisplayField>Owner_Number__c</errorDisplayField>
        <errorMessage>Owner Number cannot have leading zeros</errorMessage>
    </validationRules>
</CustomObject>